--- a/app/globals.css
+++ b/app/globals.css
@@ -93,8 +93,6 @@
   border-right: 3px solid oklch(55.1% 0.027 264.364 / 0.3);
 }
 
-
-
 .main-content {
   flex: 1;
   color: #6a7282 ;
@@ -201,6 +199,60 @@
   background: rgba(255, 255, 255, 0.2) !important;
 }
 
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
+/* Sidebar esquerda */
+.sidebar-esquerda {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .sidebar-esquerda {
+    display: block;
+    width: 260px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #1a1a1a;
+    color: #fff;
+    padding: 1.5rem;
+    border-right: 1px solid oklch(55.1% 0.027 264.364 / 0.3);
+    z-index: 20;
+  }
+}
+
+/* Sidebar direita */
+.sidebar-direita {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .sidebar-direita {
+    display: block;
+    width: 300px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background: #1a1a1a;
+    color: #fff;
+    padding: 1.5rem;
+    border-left: 1px solid oklch(55.1% 0.027 264.364 / 0.3);
+    z-index: 20;
+  }
+}
+
+
+/* Esconde a barra de rolagem, mas permite rolar */
+.oculta-scrollbar {
+  scrollbar-width: none;          /* Firefox */
+  -ms-overflow-style: none;       /* IE e Edge */
+}
+.oculta-scrollbar::-webkit-scrollbar {
+  display: none;                  /* Chrome, Safari e Opera */
+}
 
 
 
